# photon

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: VERIFICATION.md  configuration.md  supply-chain.md
photon/: Cargo.toml  README.md  build.rs
photon-backend/: Cargo.toml
photon-backend-fluvio/: Cargo.toml
photon-backend-fluvio/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  lib.rs  message.rs  publish.rs  stream_shard.rs
photon-backend-fluvio/tests/: fluvio_contract.rs
photon-backend-kafka/: Cargo.toml
photon-backend-kafka/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  lib.rs  message.rs  publish.rs  stream_shard.rs  topic.rs
photon-backend-kafka/tests/: kafka_contract.rs
photon-backend-nats/: Cargo.toml
photon-backend-nats/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  kv.rs  lib.rs  message.rs  port.rs  publish.rs  stream.rs
photon-backend-nats/tests/: nats_contract.rs
photon-backend-sqlite/: Cargo.toml  README.md
photon-backend-sqlite/src/: lib.rs  port.rs
photon-backend-sqlite/tests/: sqlite_contract.rs
photon-backend/benches/: dispatch_stub.rs  envelope_crypto.rs  shard_routing.rs
photon-backend/src/: error.rs  executor_services.rs  handler_registry.rs  lib.rs  shard_router.rs
photon-backend/src/backend/: generic.rs  mod.rs  photon_backend.rs
photon-backend/src/checkpoint/: coalescer.rs
photon-backend/src/consumer_group/: coordinator.rs  mod.rs
photon-backend/src/delivery/: dlq.rs  worker_pool.rs
photon-backend/src/event/: envelope.rs
photon-backend/src/instrumentation/: backend.rs
photon-backend/src/models/: subscribe_opts.rs
photon-backend/src/retention/: reclaimer.rs
photon-backend/src/storage/: in_proc.rs  mod.rs  port.rs
photon-backend/tests/: checkpoint_regression.rs  group_subscribe_merge.rs  retention_no_checkpoint.rs  retention_reclaim.rs  topic_not_found.rs
photon-bench/: Cargo.toml  EXPERIMENTS.md
photon-bench/src/: fill_results.rs  matrix.rs  matrix_campaign.rs  matrix_run.rs  run.rs
photon-bench/src/experiments/: mod.rs  registry.rs  resolve.rs  specs.rs
photon-bench/src/harness/: capture.rs  resource.rs
photon-bench/src/metrics/: pass_eval.rs
photon-bench/src/projection/: aggregate.rs  inputs.rs  mod.rs  render.rs
photon-bench/src/projection/scaling/: filter.rs  fit.rs  load.rs
photon-core/: Cargo.toml  README.md
photon-core/src/: identity.rs  lib.rs  stub_identity.rs
photon-e2e/: Cargo.toml  README.md
photon-e2e/tests/: handler_failure_dlq.rs  matrix_smoke.rs  scenarios.rs  subscribe_executor.rs
photon-macros/: Cargo.toml
photon-macros/src/: lib.rs  subscribe.rs  topic.rs
photon-runtime/: Cargo.toml
photon-runtime/src/: builder.rs  executor.rs  lib.rs  photon.rs
photon-runtime/src/admin/: snapshot.rs
photon-runtime/tests/: runtime_surface.rs
photon-telemetry/: Cargo.toml
photon-telemetry/src/: console.rs  global.rs  lib.rs  recording.rs
photon-testkit/: Cargo.toml
photon-testkit/src/: bench_handlers.rs  consumer_group.rs  cross_node.rs  lib.rs  runner.rs  scenario.rs  shared_store.rs
photon-testkit/src/backend_author/: contract.rs  harness.rs
photon-testkit/src/bootstrap/: mod.rs  telemetry.rs
photon/docs/: configuration.md
photon/examples/: consumer_group.rs  embedded_mem.rs  keyed_topic.rs  manual_subscribe.rs  subscribe_v2.rs  telemetry_ops_log.rs
photon/src/: config.rs  lib.rs
photon/src/runtime/: mod.rs  prelude.rs
photon/src/runtime/instrumentation/: mod.rs
