[workspace]
resolver = "2"
members = [
    "photon-core",
    "photon-macros",
    "photon-telemetry",
    "photon-backend",
    "photon-backend-nats",
    "photon-backend-fluvio",
    "photon-backend-kafka",
    "photon-backend-sqlite",
    "photon-runtime",
    "photon",
    "photon-testkit",
    "photon-e2e",
    "photon-bench",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/unified-field-dev/photon"
homepage = "https://github.com/unified-field-dev/photon"
keywords = ["pubsub", "events", "async", "messaging", "streaming"]
categories = ["asynchronous", "network-programming"]

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = 1

[workspace.dependencies]
quark = { package = "uf-quark", version = "0.1.1" }
photon-core = { package = "uf-photon-core", version = "0.1.1", path = "photon-core" }
photon-macros = { version = "0.1.1", path = "photon-macros" }
photon-telemetry = { version = "0.1.1", path = "photon-telemetry" }
photon-backend = { version = "0.1.1", path = "photon-backend", default-features = false }
photon-runtime = { version = "0.1.1", path = "photon-runtime", default-features = false }
photon-backend-nats = { version = "0.1.1", path = "photon-backend-nats" }
photon-backend-kafka = { version = "0.1.1", path = "photon-backend-kafka" }
photon-backend-fluvio = { version = "0.1.1", path = "photon-backend-fluvio" }
photon-backend-sqlite = { version = "0.1.1", path = "photon-backend-sqlite" }
photon = { package = "uf-photon", version = "0.1.1", path = "photon" }
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chacha20poly1305 = "0.10"
rand_core = "0.6"
zeroize = "1"
base64 = "0.22"
dashmap = "6"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
# Enable pedantic/nursery; allow low-signal noise rather than hundreds of attributes.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
items_after_statements = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "allow"
module_name_repetitions = "allow"
