[package]
name = "photon-backend-fluvio"
version = "0.1.1"
edition = "2021"
description = "Fluvio storage adapter for Photon"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-backend-fluvio"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
photon-backend = { workspace = true, features = ["runtime"] }
async-trait = { workspace = true }
async-stream = { workspace = true }
bytes = "1"
chrono = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
fluvio = "0.50.1"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = "0.3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
