[package]
name = "photon-backend-nats"
version = "0.1.1"
edition = "2021"
description = "NATS JetStream storage adapter for Photon"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-backend-nats"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
photon-backend = { workspace = true, features = ["runtime"] }
async-trait = { workspace = true }
async-stream = { workspace = true }
bytes = "1"
chrono = { workspace = true }
futures = "0.3"
serde_json = { workspace = true }
async-nats = "0.38"
time = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-nats = "0.38"
futures = "0.3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
