[package]
name = "photon-backend-sqlite"
version = "0.1.1"
edition = "2021"
description = "SQLite embedded storage adapter for Photon"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-backend-sqlite"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
photon-backend = { workspace = true, features = ["runtime"] }
async-trait = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = "0.3"
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
