[package]
name = "photon-bench"
version = "0.1.0"
edition = "2021"
description = "Synthetic Photon benchmarks (BM-P*)"
publish = false

[[bin]]
name = "photon-bench"
path = "src/main.rs"

[features]
default = ["mem"]
mem = ["photon-testkit/mem"]
nats = ["photon-testkit/nats"]
fluvio = ["photon-testkit/fluvio"]
kafka = ["photon-testkit/kafka"]
sqlite = ["photon-testkit/sqlite"]
full-brokers = ["nats", "fluvio", "kafka"]

[dependencies]
photon-testkit = { path = "../photon-testkit" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }

# Bench CLI: allow unwrap/expect and stdout for human-readable reports.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "deny"
print_stdout = "allow"
print_stderr = "allow"
todo = "deny"
unimplemented = "deny"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
items_after_statements = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "allow"
module_name_repetitions = "allow"
