[package]
name = "uf-photon-core"
version = "0.1.1"
edition = "2021"
description = "Photon core types and identity port"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/uf-photon-core"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "photon_core"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
