[package]
name = "photon-e2e"
version = "0.1.0"
edition = "2021"
description = "Matrix-driven Photon correctness integration tests"
publish = false

[features]
default = ["mem"]
mem = ["photon-testkit/mem"]
nats = ["photon-testkit/nats"]
fluvio = ["photon-testkit/fluvio"]
kafka = ["photon-testkit/kafka"]
sqlite = ["photon-testkit/sqlite"]
broker = ["nats"]

[dependencies]
photon-testkit = { path = "../photon-testkit" }

[dev-dependencies]
photon-testkit = { path = "../photon-testkit" }
photon = { workspace = true, features = ["runtime", "mem"] }
photon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Test crate: inherit workspace intent but allow unwrap/expect in scenarios.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
todo = "deny"
unimplemented = "deny"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
items_after_statements = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "allow"
module_name_repetitions = "allow"
