[package]
name = "photon-macros"
version = "0.1.1"
edition = "2021"
description = "Proc macros for Photon pub/sub (#[photon::topic], #[photon::subscribe])"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-macros"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# No [dev-dependencies] on uf-photon: that would block `cargo publish` before the facade
# exists on crates.io. Usage examples below are `ignore`d; runnable coverage lives in
# uf-photon / photon-e2e.

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
