[package]
name = "photon-runtime"
version = "0.1.1"
edition = "2021"
description = "Photon runtime builder and process-wide configuration"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-runtime"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
photon-core = { workspace = true }
photon-backend = { workspace = true }
photon-telemetry = { workspace = true }
futures = { version = "0.3", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }

[features]
default = []
runtime = [
    "photon-backend/runtime",
    "dep:futures",
    "dep:anyhow",
    "dep:tokio",
    "dep:tracing",
    "dep:tokio-util",
]
mem = ["photon-backend/mem", "runtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
