[package]
name = "photon-telemetry"
version = "0.1.1"
edition = "2021"
description = "Photon OpsLog telemetry port"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/photon-telemetry"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json = { workspace = true }

[features]
default = []
recording = []

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
