[package]
name = "photon-testkit"
version = "0.1.0"
edition = "2021"
description = "Shared matrix/scenario/bootstrap for photon-e2e and photon-bench"
publish = false

[features]
default = ["mem"]
mem = ["photon-runtime/mem"]
nats = ["mem", "dep:photon-backend-nats"]
fluvio = ["mem", "dep:photon-backend-fluvio"]
kafka = ["mem", "dep:photon-backend-kafka"]
sqlite = ["mem", "dep:photon-backend-sqlite"]
backend-author = []

[dependencies]
photon-runtime = { workspace = true, features = ["runtime", "mem"] }
photon-core = { workspace = true }
photon-backend = { workspace = true, features = ["runtime"] }
photon-backend-nats = { workspace = true, optional = true }
photon-backend-fluvio = { workspace = true, optional = true }
photon-backend-kafka = { workspace = true, optional = true }
photon-backend-sqlite = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
photon-telemetry = { workspace = true, features = ["recording"] }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serial_test = "3"

# Test harness: same workspace lint intent; allow unwrap/expect in fixtures.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
todo = "deny"
unimplemented = "deny"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
items_after_statements = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "allow"
module_name_repetitions = "allow"
