[package]
name = "uf-photon"
version = "0.1.1"
edition = "2021"
description = "Pub/sub event pipeline facade — composable storage adapters"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/uf-photon"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "photon"

[dependencies]
photon-macros = { workspace = true }
photon-core = { workspace = true }
photon-telemetry = { workspace = true }
photon-backend = { workspace = true, optional = true }
photon-runtime = { workspace = true, optional = true }
photon-backend-nats = { workspace = true, optional = true }
photon-backend-kafka = { workspace = true, optional = true }
photon-backend-fluvio = { workspace = true, optional = true }
photon-backend-sqlite = { workspace = true, optional = true }
quark = { workspace = true }

[features]
default = []
mem = ["photon-backend/mem", "photon-runtime/mem"]
nats = ["mem", "dep:photon-backend-nats"]
kafka = ["mem", "dep:photon-backend-kafka"]
fluvio = ["mem", "dep:photon-backend-fluvio"]
sqlite = ["mem", "dep:photon-backend-sqlite"]
runtime = [
    "dep:photon-backend",
    "dep:photon-runtime",
    "mem",
    "photon-backend/runtime",
    "photon-runtime/runtime",
]

[dev-dependencies]
photon-backend = { workspace = true, features = ["mem", "runtime"] }
photon-runtime = { workspace = true, features = ["mem", "runtime"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[[example]]
name = "embedded_mem"
required-features = ["runtime", "mem"]

[[example]]
name = "consumer_group"
required-features = ["runtime", "mem"]

[[example]]
name = "manual_subscribe"
required-features = ["runtime", "mem"]

[[example]]
name = "keyed_topic"
required-features = ["runtime", "mem"]

[[example]]
name = "telemetry_ops_log"
required-features = ["runtime", "mem"]

[[example]]
name = "subscribe_v2"
required-features = ["runtime", "mem"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
